--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "html-react-parser": "^1.4.13",
+    "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.1",
     "knex": "^3.1.0",
     "node": "^18.7.0",
