--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "get-contrast": "^3.0.0",
     "helmet": "^7.1.0",
     "html-react-parser": "^1.4.13",
     "http-proxy-middleware": "^2.0.6",
