--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-color-wheel": "^2.1.1",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "nodemon": "^2.0.20",
     "npm": "^8.15.1",
     "react": "^18.1.0",
+    "react-color-palette": "^7.1.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
